# ttg

./: .clang-format  .dockerignore  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  INSTALL.md  LICENSE  Makefile  README.md  _c_i-_administration-_notes.html  _c_i-_administration-_notes_8md.html  _coding-_standards.html  _coding-_standards_8md.html  _config.yml  _design-_device.html  _design-_device_8md.html  _design-_pull.html  _documenting-_t_t_g.html  _documenting-_t_t_g_8md.html  _pull-terminal-design-doc_8md.html  _r_e_a_d_m_e_8md.html  _recommended-_workflow-_elements.html  _t_t_g-_build-_infrastructure.html  _t_t_g-_build-_infrastructure_8md.html  _workflow_8md.html  add__member__const_8hpp.html  add__member__const_8hpp__dep__incl.map  add__member__const_8hpp__dep__incl.md5  add__member__const_8hpp__incl.map  add__member__const_8hpp__incl.md5  add__member__const_8hpp_source.html  add__member__cv_8hpp.html  add__member__cv_8hpp__dep__incl.map  add__member__cv_8hpp__dep__incl.md5  (+3993 more)
doc/dox/: CMakeLists.txt
doc/dox/config/: Doxyfile.in  header.html  layout.xml
doc/dox/contrib/: CI-Administration-Notes.md  Coding-Standards.md  Design-Device.md  Documenting-TTG.md  GitHub-Actions-Administration-Notes.md  Pull-terminal-design-doc.md  TTG-Build-Infrastructure.md  TTG-subprojects.md  Travis-CI-Administration-Notes.md  Workflow.md  top.md
doc/dox/dev/: top.md
doc/dox/user/: iterative.dot  reducing.dot  simple.dot  top.md
examples/: CMakeLists.txt  blockmatrix.h  devblas_helper.h  floyd_warshall.impl.h  floyd_warshall_df.impl.h  ge.impl.h  ge_df.impl.h  keyranges.cc  maddomain.h  madfunctiondata.h  madfunctionfunctor.h  madfunctionnode.h  madgl.cc  madgl.h  madhash.h  madkey.h  madmisc.h  madmxm.h  madnew.cc  madrange.h  madsimpletensor.h  madtwoscale.cc  madtwoscale.h  madtypes.h  mapreduce.impl.h  matrixtile.h  mradomain.h  mrafunctiondata.h  mrafunctionfunctor.h  mrafunctionnode.h  mragl.cc  mragl.h  mrahash.h  mrakey.h  mramisc.h  mramxm.h  mranew.cc  mrarange.h  mrasimpletensor.h  mratwoscale.cc  (+13 more)
examples/FW-APSP/: FloydIterativeKernel.h  FloydIterativeKernelDF.h  FloydRecursiveParallelKernel.h  FloydRecursiveSerialKernelDF.h
examples/GE/: GEIterativeKernel.h  GEIterativeKernelDF.h  GERecursiveParallelKernel.h  GERecursiveSerialKernel.h
examples/device_mock/: device_mock.cc
examples/floyd-warshall/: floyd_warshall.cc  floyd_warshall_df.cc
examples/floyd-warshall/FW-APSP/: FloydIterativeKernel.h  FloydIterativeKernelDF.h  FloydRecursiveParallelKernel.h  FloydRecursiveSerialKernelDF.h
examples/ge/: ge.cc  ge_df.cc
examples/ge/GE/: GEIterativeKernel.h  GEIterativeKernelDF.h  GERecursiveParallelKernel.h  GERecursiveSerialKernel.h
examples/helloworld/: helloworld.cpp
examples/madness/: floyd_warshall.cc  floyd_warshall_df.cc  ge.cc  ge_df.cc  madttg.cc  mapreduce.cc  mrattg.cc  mrattg_aggregator.cc  mrattg_streaming.cc  randomaccess.cc  reciprocal.cc  spmm.cc  sw.cc  t9.cc  test.cc  wavefront-df.cc  wavefront-wf.cc  wavefront-wf2.cc
examples/madness/madness-1d/: Matrix.h  Vector.h  madness-1d.cc  quadrature.h  twoscalecoeffs.h
examples/madness/mra/: mrafunctiondata.h  mragl.h  mrahash.h  mrakey.h  mramisc.h  mramxm.h  mrarange.h  mrattg.cc
examples/madness/mra-device/: functiondata.h  functionfunctor.h  functionnode.h  functor.cu  gaussian.h  gl.cc  gl.cu  gl.h  kernels.cu  kernels.h  mrattg-device.cc  tensor.h  tensorview.h
examples/mapreduce/: mapreduce.cc  sample.txt  words
examples/matrix/: test-matrix.cc  ttg_matrix.h
examples/parsec/: spmm.cc  sw.cc  t9.cc  test.cc
examples/potrf/: core_dplgsy.h  core_plgsy.h  init_matrix.h  lauum.h  plgsy.h  pmw.h  potrf.cc  potrf.h  potrf_pdc.cc  potri.h  random.h  result.h  testing_dlauum.cc  testing_dpoinv.cc  testing_dpotrf.cc  testing_dpotri.cc  testing_dtrtri.cc  tracing.h  trtri.h  trtri_L.h  trtri_U.h  util.h
examples/randomaccess/: randomaccess.cc
examples/simplegenerator/: simplegenerator.cc
examples/spmm/: active-set-strategy.h  cuda_gemm.cc  cuda_gemm.h  devicegemm.h  devicetensor.h  spmm.cc  spmm_cuda.cc
examples/sw/: sw.cc
examples/t9/: t9.cc  t9_streaming.cc
examples/task-benchmarks/: chain-ttg-dev.cc  chain-ttg.cc  chrono.h
examples/test/: test.cc
examples/wavefront/: wavefront-df.cc  wavefront-pull.cc  wavefront-wf.cc  wavefront-wf2.cc
tests/: CMakeLists.txt  movetest.cc  serialization.cc  serialize_in_c.cc
tests/unit/: CMakeLists.txt  constraints.cc  cuda_kernel.cu  cuda_kernel.h  device_coro.cc  fibonacci-coro.cc  fibonacci.cc  fibonacci_cuda_kernel.cu  fibonacci_cuda_kernel.h  fibonacci_device.cc  ranges.cc  serialization.cc  serialization_boost.cc  splitmd_serialization.cc  streams.cc  tt.cc  unit_main.cpp
ttg/: CMakeLists.txt  edge.h  terminal.h  ttg.h  wrap.h
ttg/base/: keymap.h  op.h  terminal.h  world.h
ttg/madness/: ttg.h  watch.h
ttg/parsec/: ttg.h
ttg/ttg/: aggregator.h  attributes.h  broadcast.h  buffer.h  config.in.h  constraint.h  coroutine.h  data_descriptor.h  devicescope.h  devicescratch.h  edge.h  env.h  execution.h  func.h  fwd.h  impl_selector.h  keyrange.h  make_device_tt.h  make_tt.h  op.h  policies.h  ptr.h  reduce.h  run.h  runtimes.h  serialization.h  terminal.h  traverse.h  tt.h  ttvalue.h  view.h  world.h  wrap.h
ttg/ttg/base/: keymap.h  op.h  terminal.h  tt.h  world.h
ttg/ttg/common/: ctl.h  wrap.h
ttg/ttg/device/: cublas_helper.cpp  cublas_helper.h  device.h  send.h  task.h
ttg/ttg/madness/: buffer.h  device.h  devicefunc.h  devicescratch.h  fwd.h  import.h  ttg.h  ttvalue.h  watch.h
ttg/ttg/parsec/: buffer.h  comm_helper.h  copy_handler.h  device.h  devicefunc.h  devicescratch.h  funcs.h  fwd.h  hooks.h  import.h  parsec-ext.h  parsec_data.h  parsec_ttg.cc  (+9 more)
ttg/util/: backtrace.cpp  backtrace.h  broadcast.h  bug.cpp  bug.h  data_descriptor.h  demangle.h  dot.h  execution.h  func.h  future.h  hash.h  impl_selector.h  meta.h  op.h  print.h  reduce.h  runtimes.h  serialization.h  traverse.h  tree.h  version.cc  void.h  world.h
(+1893 files in other folders)
